@@ -31,6 +31,7 @@ Package org.springframework.samples
 Package org.springframework.web
 * changed MultiActionController's log level from INFO to DEBUG
 * removed deprecated BindStatus class from "servlet.tags": use BindStatus from "servlet.support" (recompile old JSPs)
+* included debug logging for session attributes being added and removed (AbstractFormController and AbstractWizardFormController)
 
 
 Changes in version 1.1.5 (28.2.2005)
